--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
 	<meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="scripts/vendor/jquery-1.11.0.min.js" type="text/javascript" ></script>
+	<script src="scripts/vendor/jquery-ui-1.10.4.custom.min.js"></script>
 	
 	<script src="scripts/vendor/angular.min.js" type="text/javascript" ></script>
 	<script src="scripts/vendor/angular-route.min.js" type="text/javascript" ></script>
+	
+	<script src="scripts/vendor/angularPrime-0.5.js" type="text/javascript" ></script>
 
-	<script src="scripts/vendor/require.min.js" type="text/javascript"></script>
+	<script type="text/javascript" src="scripts/vendor/require.min.js"></script>
 
 	<link href="css/main.css" rel="stylesheet" >
 	
@@ -17,10 +20,7 @@
 </head>
 <body>
 
-
 	<div ng-view></div>
-	<div id="push"></div>
-
 
 </body>
 </html>
