--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 
 	<script src="scripts/vendor/require.min.js" type="text/javascript" data-main="scripts/appMain.js"></script>
 
-	<link href="css/primeui-1.0.css" rel="stylesheet" >
-	<link href="css/angularPrime-0.5.css" rel="stylesheet" >
+	<link href="css/theme.css" rel="stylesheet" >
+<!-- 	<link href="css/primeui-1.0.css" rel="stylesheet" > -->
+<!-- 	<link href="css/angularPrime-0.5.css" rel="stylesheet" > -->
 	<link href="css/main.css" rel="stylesheet" >
 	
 	<title>PrimeUI</title>
@@ -25,6 +26,8 @@
 <body>
 
 	<div ng-view></div>
+	
+	<div id="messages"></div>
 
 </body>
 </html>
